--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>TaskPro Elite - Earn & Promote</title>
+    <title>Task Bazar - Earn & Promote</title>
     <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-database-compat.js"></script>
@@ -135,7 +135,7 @@
 <!-- Auth View -->
 <div id="auth-view" class="view active" style="padding: 50px 25px; max-width: 400px; margin: 0 auto;">
     <div style="text-align: center; margin-bottom: 30px;">
-        <h1 style="font-size: 2rem; font-weight: 800; background: var(--p-gradient); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">EliteTask</h1>
+        <h1 style="font-size: 2rem; font-weight: 800; background: var(--p-gradient); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">TaskBazar</h1>
         <p data-i18n="authTagline" style="color: var(--text-p); font-weight: 600; font-size: 0.85rem;">The Premium Micro-Task Platform</p>
     </div>
     <div class="elite-card">
@@ -249,7 +249,7 @@
 
         <!-- Support Chat -->
         <div id="support-view" class="view">
-            <h3 data-i18n="support" class="section-h">Elite Support Chat</h3>
+            <h3 data-i18n="support" class="section-h">Support Chat</h3>
             <div class="elite-card">
                 <div id="chat-box" class="chat-container"></div>
                 <div style="display: flex; gap: 10px; margin-top: 15px;">
