--- a/index.html
+++ b/index.html
@@ -183,16 +183,23 @@
             <div id="notice-board" style="background:#fff7ed; border:1px solid #ffedd5; padding:10px; border-radius:15px; margin-top:20px; color:#9a3412; font-size: 0.75rem; font-weight:700; display:none;">
                 <marquee id="notice-text"></marquee>
             </div>
-            <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 12px; margin-top: 15px;">
-                <div class="elite-card" style="padding: 15px; text-align: center; cursor: pointer; margin-bottom:0;" onclick="showView('spin-view')">
+            
+            <!-- আপডেট করা গ্রিড (স্পিন, বোনাস এবং অফার) -->
+            <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px; margin-top: 15px;">
+                <div class="elite-card" style="padding: 12px 5px; text-align: center; cursor: pointer; margin-bottom:0;" onclick="showView('spin-view')">
                     <div style="font-size: 1.5rem; margin-bottom: 3px;">🎡</div>
                     <p data-i18n="spin" style="font-size: 0.65rem; font-weight: 800; color: #6366f1;">Lucky Spin</p>
                 </div>
-                <div class="elite-card" style="padding: 15px; text-align: center; cursor: pointer; margin-bottom:0;" onclick="claimDailyBonus()">
+                <div class="elite-card" style="padding: 12px 5px; text-align: center; cursor: pointer; margin-bottom:0;" onclick="claimDailyBonus()">
                     <div style="font-size: 1.5rem; margin-bottom: 3px;">🎁</div>
                     <p data-i18n="gift" style="font-size: 0.65rem; font-weight: 800; color: #10b981;">Daily Gift</p>
                 </div>
+                <div class="elite-card" style="padding: 12px 5px; text-align: center; cursor: pointer; margin-bottom:0; border: 1.5px dashed #f59e0b; background: #fffbeb;" onclick="location.href='specialoffers.html'">
+                    <div style="font-size: 1.5rem; margin-bottom: 3px;">🎊</div>
+                    <p data-i18n="offers" style="font-size: 0.65rem; font-weight: 800; color: #d97706;">Special Offer</p>
+                </div>
             </div>
+
             <h3 data-i18n="missions" class="section-h">Available Missions</h3>
             <div id="task-container"></div>
         </div>
@@ -296,7 +303,7 @@
         bn: {
             authTagline: "প্রিমিয়াম মাইক্রো-টাস্ক প্ল্যাটফর্ম",
             fullName: "সম্পূর্ণ নাম", referCode: "রেফার কোড (ঐচ্ছিক)", email: "ইমেইল অ্যাড্রেস", password: "গোপন পাসওয়ার্ড",
-            points: "পয়েন্ট", spin: "লাকি স্পিন", gift: "প্রতিদিনের উপহার", missions: "উপলব্ধ মিশন",
+            points: "পয়েন্ট", spin: "লাকি স্পিন", gift: "ডেইলি বোনাস", offers: "স্পেশাল অফার", missions: "উপলব্ধ মিশন",
             directChatText: "সরাসরি এডমিনের সাথে কথা বলতে:", adminSupportBtn: "এডমিন সাপোর্ট (চ্যাট)",
             pageHome: "হোম / মিশন", pagePromote: "প্রমোট পেজ", pageProfile: "প্রোফাইল পেজ", pageSpin: "স্পিন / বোনাস", pagePayment: "পেমেন্ট সমস্যা",
             navMissions: "মিশন", navPromote: "প্রমোট", navChat: "অভিযোগ", navProfile: "প্রোফাইল",
@@ -309,7 +316,7 @@
         en: {
             authTagline: "The Premium Micro-Task Platform",
             fullName: "Full Name", referCode: "Refer Code (Optional)", email: "Email Address", password: "Secret Password",
-            points: "Points", spin: "Lucky Spin", gift: "Daily Gift", missions: "Available Missions",
+            points: "Points", spin: "Lucky Spin", gift: "Daily Gift", offers: "Special Offer", missions: "Available Missions",
             directChatText: "To talk directly with Admin:", adminSupportBtn: "Admin Support (Chat)",
             pageHome: "Home / Missions", pagePromote: "Promote Page", pageProfile: "Profile Page", pageSpin: "Spin / Bonus", pagePayment: "Payment Issue",
             navMissions: "Missions", navPromote: "Promote", navChat: "Complaint", navProfile: "Profile",
@@ -652,7 +659,7 @@ async function enhancedSpinWheel() {
         // ১. ফায়ারবেস থেকে ইউজারের সিকিউর টোকেন নেওয়া
         const token = await auth.currentUser.getIdToken();
 
-        // ২. আপনার ব্যাকএন্ডে রিকোয়েস্ট পাঠানো (লিংকটি পরিবর্তন করতে ভুলবেন না)
+        // ২. আপনার ব্যাকএন্ডে রিকোয়েস্ট পাঠানো (লিংকটি পরিবর্তন করতে ভুলবেন ঘন)
         const response = await fetch('https://taskbajar-backend.vercel.app/api/spin', {
             method: 'POST',
             headers: {
